@@ -2,6 +2,7 @@ Revision history for Padre-Plugin-Parrot
 
 	- Add menu option to open one of the installed example files.
 	- Enable context sensitive help on PIR files
+	- made compatible to newer Padre versions (ZENOG)
 
 0.26 2009.10.02
 	- Allow the execution of PIR files.
